src/components/Markdown/Markdown.module.scss
@import '../../utils';

$fontSize: rem(20px);

// see https://github.com/sindresorhus/github-markdown-css/blob/gh-pages/github-markdown.css

.markdown {
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
    sans-serif, Apple Color Emoji, Segoe UI Emoji;
  font-size: $fontSize;
  line-height: 1.5;
  word-wrap: break-word;
  color: #24292e;

  > :first-child {
    margin-top: 0 !important;
  }

  > :last-child {
    margin-bottom: 0 !important;
  }

  // Custom

  a {
    text-decoration: none;
    color: #0366d6;

    &:hover {
      text-decoration: underline;
    }

    &:not([href]) {
      text-decoration: none;
      color: inherit;
    }
  }

  code {
    padding: em(2px, $fontSize) em(6px, $fontSize);
    border-radius: em(4px, $fontSize);
    background: #eee;
  }

  code,
  kbd,
  pre {
    font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
    line-height: 1.5;
  }

  code,
  kbd {
    font-size: 0.8em;
  }

  h1 {
    font-size: 2.5em;
    font-weight: 700;
    line-height: 1.25;
    margin-top: 0;
    margin-bottom: 1em;
  }

  h2,
  h3 {
    font-weight: 500;
    line-height: 1.25;
    margin-top: 1.5em;
    margin-bottom: 0;
  }

  h2 {
    font-size: 2em;
  }

  h3 {
    font-size: 1.3em;
  }

  img {
    max-width: 100%;
    margin-bottom: -0.4em; // To remove space due to inline elements
    border-style: none;
  }

  li + li {
    margin-top: 0.25em;
  }

  p,
  pre,
  ul {
    margin: 1.5em 0;
  }

  pre {
    font-size: 1em;
    overflow-x: auto;
    padding: 0.8em;
    border-radius: em(4px, $fontSize);

    code {
      padding: 0;
      border-radius: 0;
      background: none;

      overflow-wrap: break-word;
    }
  }

  ul {
    padding-left: 1.5em;
  }
}

